# dtangle

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml  testing.yml
docs/: conf.py  index.rst  install.rst  requirements.txt
docs/notebooks/: vignette_basic.ipynb  vignette_brain.ipynb  vignette_pbmc3k.ipynb
examples/: 01_tutorial_basic_preprocess.ipynb  02_turorial_basic_deconvolution.ipynb  03_tutorial_brain_single_cell_preprocess.ipynb  04_tutorial_brain_microarray_preprocess.ipynb  05_tutorial_brain_deconvolut.ipynb  06_tutorial_kidney_single_cell_reference.ipynb  07_tutorial_pbmc3k_deconvolution.ipynb  turorial_basic_deconvolution.ipynb  tutorial_basic.ipynb  tutorial_brain_microarray.ipynb  tutorial_brain_single_cell.ipynb  tutorial_single_cell_reference.ipynb
src/dtangle/: __init__.py  _deconvolution.py  _differential.py  _estimation.py  _input.py  _markers.py  _types.py  _version.py
tests/: test_deconvolution.py  test_differential_proportion.py  test_package.py
